# gmpwrap

./: .clang-format  .pre-commit-config.yaml  CMakeLists.txt  gmpwrap.h
.github/workflows/: pr_and_push_to_master.yml  pr_to_master.yml
src/: gmpwrap.h
src/types/: BigFloat.cpp  BigFloat.h  BigInteger.cpp  BigInteger.h
tests/: all_tests.cpp  test_big_integer.cpp
types/: BigInteger.h
